[fix #63] 베스트셀러 임시 선정