@@ -53,18 +53,28 @@ public class BookQueryServiceImpl implements BookQueryService {
 
     @Override
     public BookResponseDTO.GetBestSellersResultDTO getBestSellers(Member member) {
-        List<Book> books = bookRepository.findAll();
+        // TODO: 배스트셀러로 변경
+        List<String> titles = Arrays.asList("이처럼 사소한 것들", "급류", "서랍에 저녁을 넣어 두었다 - 2024 노벨문학상 수상작가", "희랍어 시간 - 2024 노벨문학상 수상작가", "너의 유토피아", "대온실 수리 보고서");
 
-        // bestRank가 1~5인 책 필터링
-        List<Book> filteredBooks = books.stream()
-                .filter(book -> book.getBestRank() >= 1 && book.getBestRank() <= 5)
-                .collect(Collectors.toList());
+        List<Book> books = titles.stream()
+                .map(bookRepository::findBookByTitle)
+                .flatMap(Optional::stream)
+                .toList();
 
-        // 최대 5권을 랜덤으로 선택
-        Collections.shuffle(filteredBooks);
-        List<Book> selectedBooks = filteredBooks.stream().limit(5).collect(Collectors.toList());
+        return BookConverter.toGetBestSellersResultDTO(books);
 
-        return BookConverter.toGetBestSellersResultDTO(selectedBooks);
+//        List<Book> books = bookRepository.findAll();
+//
+//        // bestRank가 1~5인 책 필터링
+//        List<Book> filteredBooks = books.stream()
+//                .filter(book -> book.getBestRank() >= 1 && book.getBestRank() <= 5)
+//                .collect(Collectors.toList());
+//
+//        // 최대 5권을 랜덤으로 선택
+//        Collections.shuffle(filteredBooks);
+//        List<Book> selectedBooks = filteredBooks.stream().limit(5).collect(Collectors.toList());
+//
+//        return BookConverter.toGetBestSellersResultDTO(selectedBooks);
     }
 
     @Override
